Speed and memory optimizations: 1) Added picture thumbnail generation; thumbnails are added to the document and are used everywhere instead of big images got from camera which take about 20MB in memory; 2) Disabled undo for the document as it is not supported now Added upside-down interface orientation for iPhone

--- a/Source/iOS/ConstructiveEditor/Resources/en.lproj/MainStoryboard_iPhone.storyboard
+++ b/Source/iOS/ConstructiveEditor/Resources/en.lproj/MainStoryboard_iPhone.storyboard
@@ -2110,11 +2110,11 @@
         <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
+        <segue reference="YU5-mj-WCP"/>
+        <segue reference="JDV-Nc-Od8"/>
         <segue reference="NZ4-iz-omb"/>
+        <segue reference="Kt3-Kg-qnc"/>
         <segue reference="xBv-Ap-JIy"/>
         <segue reference="cxm-4P-67r"/>
-        <segue reference="Kt3-Kg-qnc"/>
-        <segue reference="2U8-C6-nGa"/>
-        <segue reference="YU5-mj-WCP"/>
     </inferredMetricsTieBreakers>
 </document>
